--- a/src/library.html
+++ b/src/library.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Filmoteka</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <title>Library</title>
+    <link rel="stylesheet" href="./sass/library.scss" />
+    <script type="module" src="./library.js"></script>
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/footer.html"></include>
-    <include src="./partials/modal-students.html"></include>
   </body>
 </html>
