--- a/src/library.html
+++ b/src/library.html
@@ -13,5 +13,6 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <include src="./partials/library-header.html"></include>
   </body>
 </html>
