--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
     <include src="./partials/api-trending.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-students.html"></include>
+    <include src="./partials/btnToUp.html"></include>
+
     <script src="./JS/api.js" type="module"></script>
+    <script src="./JS/btnToUp.js" type="module"></script>
   </body>
 </html>
