--- a/src/library.html
+++ b/src/library.html
@@ -22,5 +22,6 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/library-header.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/modal-students.html"></include>
   </body>
 </html>
