--- a/src/library.html
+++ b/src/library.html
@@ -23,5 +23,6 @@
     <include src="./partials/library-header.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-students.html"></include>
+    <include src="./partials/overlay-modal.html"></include>
   </body>
 </html>
