--- a/src/index.html
+++ b/src/index.html
@@ -31,5 +31,6 @@
     <script src="./JS/api.js" type="module"></script>
     <script src="./JS/btnToUp.js" type="module"></script>
     <script src="./JS/renderModalMarkup.js" type="module"></script>
+    <script src="./JS/search-input.js" type="module"></script>
   </body>
 </html>
