--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
 
     <include src="./partials/home-header.html"></include>
+    <include src="./partials/theme.html"></include>
     <include src="./partials/api-trending.html"></include>
     <include src="./partials/pagination.html"></include>
     <include src="./partials/footer.html"></include>
