--- a/src/library.html
+++ b/src/library.html
@@ -21,6 +21,7 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/library-header.html"></include>
+    <include src="./partials/theme.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-students.html"></include>
     <include src="./partials/overlay-modal.html"></include>
