--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <include src="./partials/api-trending.html"></include>
     <include src="./partials/pagination.html"></include>
     <include src="./partials/footer.html"></include>
-    <include src="./partials/modal-students.html"></include>
+    <!-- <include src="./partials/modal-students.html"></include> -->
     <include src="./partials/overlay-modal.html"></include>
     <include src="./partials/btnToUp.html"></include>
     <include src="./partials/modalCard.html"></include>
