--- a/src/library.html
+++ b/src/library.html
@@ -22,6 +22,7 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/library-header.html"></include>
     <include src="./partials/theme.html"></include>
+    <include src="./partials/funny-pic.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-students.html"></include>
     <include src="./partials/overlay-modal.html"></include>
