--- a/src/library.html
+++ b/src/library.html
@@ -16,11 +16,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./sass/library.scss" />
+    <link rel="stylesheet" href="./api.css" />
     <script type="module" src="./library.js"></script>
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
+    
     <include src="./partials/library-header.html"></include>
+    <include src="./partials/libraryContainer.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-students.html"></include>
   </body>
