--- a/src/library.html
+++ b/src/library.html
@@ -32,5 +32,6 @@
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-students.html"></include>
     <include src="./partials/overlay-modal.html"></include>
+    <include src="./partials/modalCard.html"></include>
   </body>
 </html>
