margin-top страдальний

--- a/src/library.html
+++ b/src/library.html
@@ -23,10 +23,13 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     
     <include src="./partials/library-header.html"></include>
+<main>
 
-    <include src="./partials/libraryContainer.html"></include>
-    <include src="./partials/theme.html"></include>
-    <include src="./partials/funny-pic.html"></include>
+  <include src="./partials/libraryContainer.html"></include>
+  <include src="./partials/theme.html"></include>
+  <include src="./partials/funny-pic.html"></include>
+  <include src="./partials/pagination.html"></include>
+</main>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-students.html"></include>
     <include src="./partials/overlay-modal.html"></include>
